<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.classlist.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#00FFFF"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register_btn"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceLarge"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/register_photo"
            android:layout_width="0dp"
            android:layout_height="132dp"
            android:layout_gravity="center"
            android:layout_weight="0.66"
            android:background="@android:color/black"
            android:contentDescription="@string/content_view"
            android:cropToPadding="true"
            android:scaleType="centerInside"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/firstName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:inputType="text"
            android:hint="@string/first_name"
            />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:inputType="text"
            android:hint="@string/last_name"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/admissionNum"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:hint="@string/admission_number"
        android:inputType="text"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_photo_btn"
            android:src="@android:drawable/ic_menu_camera"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:contentDescription="@string/content_button"/>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_btn"
            android:enabled="false"
            android:textAppearance="?android:textAppearanceLarge"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <android.support.design.widget.FloatingActionButton
            android:id = "@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:src="@android:drawable/ic_dialog_email"/>
        <EditText
            android:id="@+id/ur_name_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/fab"
            android:layout_toStartOf="@id/fab"
            android:hint="@string/url_name"/>

    </RelativeLayout>

</LinearLayout>
